2010-05-18  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Primary version of failover support (ticket #18).

2010-05-05  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Allow filesystem with no MDT and OST (ticket #39).

2010-04-09  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.906

2010-04-09  Jerome Fereyre  <jerome.fereyre@bull.net>
	* Add fsck command (ticket #34).

2010-04-07  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add router management (ticket #15).

2010-04-07  Jerome Fereyre  <jerome.fereyre@bull.net>
	* Add support of additional command line options (-o). Initialy for 
	mount, and generalized to other commands.

2010-03-31  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix regression for shine return code (ticket #59).

2010-03-29  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Component code improvement fixes ticket #52.
	* Fix timeout issues when installing (ticket #47).

2010-03-02  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* 'shine remove' now clean configuration on client nodes also (ticket #51).

2010-02-17  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.905
	* Added man page for shine(1).

2010-02-15  Stephane Thiell  <stephane.thiell@cea.fr>
	* Fix AsciiTable columns adjustment issue.

2010-01-27  Stephane Thiell  <stephane.thiell@cea.fr>
	* Fix mount_path optional parameter in client configuration line.

2010-01-27  Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix tuning.conf parsing. Better error handling.
	* Add an example file for tuning.

2010-01-27  Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix wrong target count in 'status' command.

2009-12-16  Stephane Thiell  <stephane.thiell@cea.fr>
	* Add tuning support for clients. Add automatic tuning after
	successful mounts.
	* Add ssh_fanout option to shine.conf.

2009-12-15  Stephane Thiell  <stephane.thiell@cea.fr>
	* Add label (eg. -l lustre-OST0000) support (credits: AD).
