@@ -1,3 +1,6 @@
+2010-05-19  Aurelien Degremont  <aurelien.degremont@cea.fr>
+    * Better error handling with unreachable nodes when installing(ticket #58).
+
 2010-05-18  Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Primary version of failover support (ticket #18).
 
